# ocr-project

./: .gitignore  demo.py  pyproject.toml
